deploy/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: angular-nginx-service
spec:
  selector:
    app: angular-nginx
  ports:
      - protocol: TCP
        port: 80
        targetPort: 4200
  type: NodePort

---

# kind: Service
# apiVersion: v1
# metadata:
#   name: elasticsearch-service
# spec:
#   selector:
#   ports:
#       - protocol: TCP
#         port: 9200
#         targetPort: 9200
#   type: NodePort

---

kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  # clusterIP: None
  type: NodePort

---

kind: Service
apiVersion: v1
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

# apiVersion: v1
# kind: Service
# metadata:
#   name: node-service
# spec:
#   selector:
#     app: node-service
#     tier: backend
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: http
